--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,6 @@
 body {
     width: 100%;
-    height: 100vh;
 
     display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-p {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 1.2rem;
+    flex-direction: column;
 }
